crates/toml/tests/snapshots/invalid/integer/capital-oct.stderr
TOML parse error at line 1, column 15
  |
1 | capital-oct = 0O0
  |               ^^
radix must be lowercase, expected `0o`
